--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Where's Oakland Shoreline?
 email: eligarcia@berkeley.edu
 description: > # this means to ignore newlines until "baseurl:"
-  A simple, whitespace, helvetica based portfolio theme.
+  A Shoreline's Process and Experience 
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
 twitter_username: twitter_username
