--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: *folio
+title: Where's Oakland Shoreline?
 email: you@example.com
 description: > # this means to ignore newlines until "baseurl:"
   Testtest
